[package]
name = "rsomics-rpkm-saturation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/omics-rust/rsomics-rpkm-saturation"
authors.workspace = true
description = "Subsample-based RPKM saturation analysis — Rust reimplementation of RSeQC RPKM_saturation.py"

[[bin]]
name = "rsomics-rpkm-saturation"
path = "src/main.rs"


[lib]
name = "rsomics_rpkm_saturation"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-bamio = "0.1"
clap.workspace = true
noodles = { workspace = true, features = ["bam", "sam"] }
rand = "0.8"
rand_chacha = "0.3"
rayon.workspace = true

[[bench]]
name = "rpkm_saturation"
harness = false

[dev-dependencies]
tempfile = "3"
criterion.workspace = true
