[package]
name = "rsomics-rpkm-saturation"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-rpkm-saturation"
authors = ["Zane Leong <efd@live.com>"]
description = "Subsample-based RPKM saturation analysis — Rust reimplementation of RSeQC RPKM_saturation.py"

[[bin]]
name = "rsomics-rpkm-saturation"
path = "src/main.rs"


[lib]
name = "rsomics_rpkm_saturation"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-bamio = "0.1"
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["bam", "sam"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"

[[bench]]
name = "rpkm_saturation"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
